--- a/src/routes/globals.css
+++ b/src/routes/globals.css
@@ -3,17 +3,24 @@
 :root {
     --h1: #333;
     --h2: #666;
+    --subtle-grey: #bbb;
     --text: #555;
     --accent-1: #FFA500;
     --accent-2: #6E8CB6;
     --accent-3: #007F7F;
     --border: #ccc;
+    --off-white-bg: #FFFAFA;
+
+    --top-of-page-mobile-margin: 4rem;
+    --mobile-margin-inline: 2rem;
+    --mobile-vertical-gap: 3rem;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Inter;
 }
 
 html,
@@ -25,4 +32,8 @@ main {
 
 html {
     overflow: clip;
+}
+
+.divider {
+    border-top: 1px solid var(--border);
 }
